--- a/static/style.css
+++ b/static/style.css
@@ -74,7 +74,6 @@ color:white;
 border-radius: 5px;
 }
 table{
-margin-top:-20px;
 }
 .rows{
 
@@ -84,4 +83,14 @@ box-sizing: border-box;
 box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
 border-radius: 5px;
 
+}
+
+.myBox {
+margin: auto;
+border: 8px black;
+padding: 5px;
+font: 12px/15px sans-serif;
+width: 920px;
+height: 500px;
+overflow: scroll;
 }
