--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <title>Defect Predictor</title>
 </head>
 <body>
-<form action="read-excel" method="POST">
+<form class="" action="read-excel" method="POST" enctype="multipart/form-data">
     <div class="col-md-3">
         <div class="drag-area">
             <div class="icon"><i class="fas fa-cloud-upload-alt"></i></div>
@@ -27,12 +27,13 @@
             <span>OR</span>
             <!--          <button>Browse File</button>-->
             <input type="file" name="upload-file" value="Browse File" class="upload"/>
-            <input class="btn btn-primary submit" type="submit" name="" value="submit"/>
+            <input class="btn btn-primary submit" type="submit" name="" value="Submit"/>
         </div>
     </div>
 </form>
 
 <!--    <script src="script.js"></script>-->
+<div class="myBox" >
 <div class="col-md-8">
     <table class="table table-stripped">
         <tr class="header">
@@ -54,7 +55,5 @@
     </table>
     <!--      {{ data | safe}}-->
 </div>
-
-
-</body>
+</div></body>
 </html>
