new changes with xls addition and scoll bar enhancements

--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
 </form>
 
 <!--    <script src="script.js"></script>-->
-<div class="myBox" >
+<div class="myBox scrollbar-primary" >
 <div class="col-md-8">
     <table class="table table-stripped">
         <tr class="header">
