--- a/static/style.css
+++ b/static/style.css
@@ -86,11 +86,21 @@ border-radius: 5px;
 }
 
 .myBox {
-margin: auto;
-border: 8px black;
-padding: 5px;
-font: 12px/15px sans-serif;
-width: 920px;
-height: 500px;
-overflow: scroll;
+    margin: auto;
+    border: 8px black;
+    padding: 2px;
+    font: 12px/15px sans-serif;
+    width: 994px;
+    height: 564px;
+    overflow: scroll;
 }
+
+.scrollbar-primary::-webkit-scrollbar {
+width: 7px;
+height:7px;
+background-color: #F5F5F5; }
+
+.scrollbar-primary::-webkit-scrollbar-thumb {
+border-radius: 10px;
+-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+background-color: #4285F4; }
