--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,12 @@
     </div>
 </form>
 
+<!--<div>-->
+<!--    <h3>-->
+<!--        Please upload the file to fetch the data-->
+<!--    </h3>-->
+<!--</div>-->
+
 <!--    <script src="script.js"></script>-->
 <div class="myBox scrollbar-primary" >
 <div class="col-md-8">
