--- a/static/style.css
+++ b/static/style.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
 body{
 
 }
@@ -18,6 +19,7 @@ body{
     justify-content: center;
     min-height: 100vh;
 }
+
 .drag-area{
   border: 2px dashed #fff;
   height: 324px;
@@ -28,41 +30,49 @@ body{
   justify-content: center;
   flex-direction: column;
 }
+
 .drag-area.active{
   border: 2px solid #fff;
 }
+
 .drag-area .icon{
   font-size: 100px;
   color: #fff;
 }
 
-    .drag-area header {
+.drag-area header {
         font-size: 19px;
         font-weight: 500;
         color: #fff;
-    }
+}
+
 .drag-area span{
     font-size: 19px;
     font-weight: 500;
     color: #fff;
     margin: 10px 0 15px 0;
 }
+
 .drag-area img{
   height: 100%;
   width: 100%;
   object-fit: cover;
   border-radius: 5px;
 }
+
 .btn-primary {
     color: #2e6da4;
     background-color: #ffffff;
     border-color: #2e6da4;
 }
+
 .btn-primary:hover {
     color: #fff;
     background-color: #008AD8;
     border-color: #204d74;
 }
+
+
 .submit {
     top: 523px;
     position: absolute;
@@ -73,16 +83,17 @@ background:#008AD8;
 color:white;
 border-radius: 5px;
 }
+
+
 table{
 }
-.rows{
 
+.rows{
 background: #FFFFFF;
 border: 1px solid rgba(0, 0, 0, 0.1);
 box-sizing: border-box;
 box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);
 border-radius: 5px;
-
 }
 
 .myBox {
@@ -90,7 +101,7 @@ border-radius: 5px;
     border: 8px black;
     padding: 2px;
     font: 12px/15px sans-serif;
-    width: 994px;
+    width: auto;
     height: 564px;
     overflow: scroll;
 }
@@ -98,10 +109,12 @@ border-radius: 5px;
 .scrollbar-primary::-webkit-scrollbar {
 width: 7px;
 height:7px;
-background-color: #F5F5F5; }
+background-color: #F5F5F5;
+}
 
 .scrollbar-primary::-webkit-scrollbar-thumb {
 border-radius: 10px;
 -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-background-color: #4285F4; }
+background-color: #4285F4;
+}
 
