--- a/templates/index.html
+++ b/templates/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-
     <meta name="viewport" content="width" , initial-scale=1.0">
+
     <link
             rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -62,5 +62,9 @@
     </table>
     <!--      {{ data | safe}}-->
 </div>
-</div></body>
+</div>
+
+
+
+</body>
 </html>
