--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,17 @@
     <!--      {{ data | safe}}-->
 </div>
 </div>
+<div>
 
+        <select class="selectprediction">
+            <option>SVM</option>
+            <option disabled>Random Forest</option>
+        </select>
+<button class="predictbtn">
+    Predict
+</button>
+
+</div>
 
 
 </body>
